update color selection

--- a/name.html
+++ b/name.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        .title{
-            height: 90vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        h1{
-            font-size: 80px;
-            background: -webkit-linear-gradient(rgb(235, 83, 83), rgb(161, 64, 236), rgb(24, 203, 219), rgb(50, 245, 40));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
+      h1::selection {
+        background-color: rgba(91, 57, 239, 0.466);
+      }
+      .title {
+        height: 90vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      h1 {
+        font-size: 80px;
+        background: -webkit-linear-gradient(
+          rgb(235, 83, 83),
+          rgb(161, 64, 236),
+          rgb(24, 203, 219),
+          rgb(50, 245, 40)
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="title">
-        <h1>Lòn hào</h1>
+      <h1>Lòn hào</h1>
     </div>
-</body>
+  </body>
 </html>
