--- a/name.html
+++ b/name.html
@@ -30,7 +30,9 @@
   </head>
   <body>
     <div class="title">
-      <h1>Lòn hào</h1>
+      <h1>Nguyễn Minh Nhựt</h1>
+      <h1>Nguyễn Hồ Trọng Nhân</h1>
+      <h1>Trương Nhật Nam</h1>
     </div>
   </body>
 </html>
