--- a/name.html
+++ b/name.html
@@ -14,6 +14,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
       }
       h1 {
         font-size: 80px;
