--- a/name.html
+++ b/name.html
@@ -5,35 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      h1::selection {
-        background-color: rgba(91, 57, 239, 0.466);
-      }
-      .title {
-        height: 90vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-      }
-      h1 {
-        font-size: 80px;
-        background: -webkit-linear-gradient(
-          rgb(235, 83, 83),
-          rgb(161, 64, 236),
-          rgb(24, 203, 219),
-          rgb(50, 245, 40)
-        );
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-    </style>
   </head>
   <body>
-    <div class="title">
-      <h1>Nguyễn Minh Nhựt</h1>
-      <h1>Nguyễn Hồ Trọng Nhân</h1>
-      <h1>Trương Nhật Nam</h1>
-    </div>
+    
+  [
+    {
+        "CATEGORY_ID": 1,
+        "DURATION": 240,
+        "LYRICS": "Lyrics sample",
+        "MUSIC_ID": 1,
+        "MUSIC_URL": "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3",
+        "RELEASE_DATE": "2023-07-24",
+        "THUMBNAIL_URL": "https://pic8.co/sh/6ziWGi.jpg",
+        "TITLE": "Song sample 1"
+    },
+    {
+        "CATEGORY_ID": 1,
+        "DURATION": 240,
+        "LYRICS": "Lyrics sample",
+        "MUSIC_ID": 2,
+        "MUSIC_URL": "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3",
+        "RELEASE_DATE": "2022-07-24",
+        "THUMBNAIL_URL": "https://pic8.co/sh/6ziWGi.jpg",
+        "TITLE": "Song sample 2"
+    },
+    {
+        "CATEGORY_ID": 1,
+        "DURATION": 240,
+        "LYRICS": "Lyrics sample",
+        "MUSIC_ID": 3,
+        "MUSIC_URL": "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3",
+        "RELEASE_DATE": "2023-06-24",
+        "THUMBNAIL_URL": "https://pic8.co/sh/6ziWGi.jpg",
+        "TITLE": "Song sample 3"
+    },
+    {
+        "CATEGORY_ID": 1,
+        "DURATION": 240,
+        "LYRICS": "Lyrics sample",
+        "MUSIC_ID": 4,
+        "MUSIC_URL": "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3",
+        "RELEASE_DATE": "2021-07-24",
+        "THUMBNAIL_URL": "https://pic8.co/sh/6ziWGi.jpg",
+        "TITLE": "Song sample 4"
+    }
+]
   </body>
 </html>
